# McpHub

./: Cargo.toml
src/: child.rs  config.rs  dashboard.rs  log_store.rs  main.rs  proxy.rs
static/: dashboard.html
