[package]
name = "mcp-hub"
version = "5.2.0"
edition = "2021"
authors = ["SOFLUTION LTD"]
description = "Fastest MCP proxy — BM25 tool discovery + SSE transport + auto-start. Single binary, zero deps."
license = "MIT"
repository = "https://github.com/Soflution1/McpHub"
keywords = ["mcp", "cursor", "proxy", "ai", "llm"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "McpHub"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
socket2 = { version = "0.5", features = ["all"] }
notify-rust = "4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
